[gd_scene load_steps=3 format=3 uid="uid://bri27ki5hl3un"]

[ext_resource type="Script" uid="uid://dhfmwvg2u2ejj" path="res://UI/menu_end_game.gd" id="1_e67fl"]
[ext_resource type="Script" uid="uid://bh777bd31u0mr" path="res://UI/money_countdown.gd" id="2_ta4te"]

[node name="MenuEndGame" type="Control" groups=["menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e67fl")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 75
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(900, 150)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 100
text = "IT'S PARTY TIME!!!"
horizontal_alignment = 1

[node name="rtlMoney" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(900, 250)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 175
text = "000â‚¬"
horizontal_alignment = 1
script = ExtResource("2_ta4te")

[node name="btnBack" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Back to Taxi"
flat = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/btnBack" to="." method="_on_btn_back_pressed"]
